--- a/Customer Churn.ipynb
+++ b/Customer Churn.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r'C:\\Users\\gupta\\Desktop\\Adyansh\\Courses\\INTELIPAAT\\Customer Churn Project\\customer_churn (1).csv')"
+    "df = pd.read_csv(r'customer_churn (1).csv')"
    ]
   },
   {
